@@ -66,6 +66,28 @@
 				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()">';
 		emailscountelem.value = parseInt(nr) + 1;
 	}
+
+	function newaccount() {
+		var accountscountelem = document.getElementById('accountscount');
+		var nr = accountscountelem.value;
+		var lastaccountelem = document.getElementById('account' + (nr - 1));
+		var newrow = lastaccountelem.parentNode.insertRow(lastaccountelem.rowIndex + 1);
+		newrow.className = 'light';
+		newrow.id = 'account' + nr;
+		var newcell = newrow.insertCell(0);
+		newcell.style.whiteSpace = 'nowrap';
+		newcell.innerHTML = '<HR><INPUT TYPE="text" size="50" value="" name="customeradd[accounts][' + nr + '][account]"'
+				+ ' onmouseover="popup(\'{trans("Enter bank account (optional)")}\')" onmouseout="pophide()">'
+			+ '<label onmouseover="popup(\'{trans("Check if bank account should be visible on invoice")}\')" onmouseout="pophide()">'
+				+ '<INPUT type="checkbox" value="{$smarty.const.CONTACT_INVOICES}" name="customeradd[accounts][' + nr + '][type][]">'
+				+ ' {$_CONTACTTYPES[$smarty.const.CONTACT_INVOICES]}</label>'
+			+ '<label onmouseover="popup(\'{trans("Check if bank account should be disabled")}\')" onmouseout="pophide()">'
+				+ '<INPUT type="checkbox" value="{$smarty.const.CONTACT_DISABLED}" name="customeradd[accounts][' + nr + '][type][]">'
+				+ ' {$_CONTACTTYPES[$smarty.const.CONTACT_DISABLED]}</label>'
+			+ '<BR><INPUT TYPE="text" size="68" value="" name="customeradd[accounts][' + nr + '][name]"'
+				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()">';
+		accountscountelem.value = parseInt(nr) + 1;
+	}
 //-->
 </SCRIPT>
 <FORM name="customeradd" id="customeradd" method="POST" action="?m=customeradd">
@@ -386,6 +408,39 @@
 									<TD>
 										<INPUT type="hidden" id="emailscount" value="{$item@total}">
 										<A href="javascript: newemail()">{trans("Add contact field")} &raquo;&raquo;&raquo;</A>
+									</TD>
+								</TR>
+							</table>
+						</fieldset>
+					</TD>
+				</TR>
+				<TR>
+					<TD style="width: 1%;"></TD>
+					<TD style="width: 99%;" class="nobr">
+						<fieldset style="width: 1%;" class="nobr">
+							<legend class="bold"><IMG src="img/card.gif" alt=""> {trans("Bank accounts")}</legend>
+							<table>
+								{foreach $customeradd.accounts as $key => $item}
+								<TR id="account{$key}">
+									<TD>
+										<INPUT type="text" size="50" value="{$item.account}" name="customeradd[accounts][{$key}][account]" {tip text="Enter bank account (optional)" trigger="account`$key`"}>
+										<label {tip text="Check if bank account should be visible on invoice"}>
+											<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_INVOICES}" name="customeradd[accounts][{$key}][type][]"{if ($item.type & $smarty.const.CONTACT_INVOICES)} checked{/if}>
+											{$_CONTACTTYPES[$smarty.const.CONTACT_INVOICES]}
+										</label>
+										<label {tip text="Check if bank account should be disabled" trigger="edisabled"}>
+											<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_DISABLED}" name="customeradd[accounts][{$key}][type][]"{if ($item.type & $smarty.const.CONTACT_DISABLED)} checked{/if}>
+											{$_CONTACTTYPES[$smarty.const.CONTACT_DISABLED]}
+										</label>
+										<BR>
+										<INPUT type="text" size="68" value="{$item.name}" name="customeradd[accounts][{$key}][name]" {tip text="Enter contact name/description (optional)"}>
+									</TD>
+								</TR>
+								{/foreach}
+								<TR>
+									<TD>
+										<INPUT type="hidden" id="accountscount" value="{$item@total}">
+										<A href="javascript: newaccount()">{trans("Add contact field")} &raquo;&raquo;&raquo;</A>
 									</TD>
 								</TR>
 							</table>
