@@ -85,7 +85,7 @@
 				<legend class="bold"><IMG SRC="img/phone.gif" ALT=""> {trans("Contact phones")}</legend>
 				<TABLE>
 					{foreach $customerinfo.contacts as $contact}
-					<TR CLASS="LIGHT{if ($contact.type & $smarty.const.CONTACT_DISABLED) == $smarty.const.CONTACT_DISABLED} blend{/if}">
+					<TR{if ($contact.type & $smarty.const.CONTACT_DISABLED) == $smarty.const.CONTACT_DISABLED} class="blend"{/if}>
 						<TD>
 							{$contact.phone}
 							{if $contact.typestr}[{$contact.typestr}]{/if}
@@ -106,11 +106,32 @@
 				<legend class="bold"><IMG SRC="img/mail.gif" ALT=""> {trans("Email addresses")}</legend>
 				<TABLE>
 					{foreach $customerinfo.emails as $email}
-					<TR CLASS="LIGHT{if ($email.type & $smarty.const.CONTACT_DISABLED) == $smarty.const.CONTACT_DISABLED} blend{/if}">
+					<TR{if ($email.type & $smarty.const.CONTACT_DISABLED) == $smarty.const.CONTACT_DISABLED} class="blend"{/if}>
 						<TD>
 							<A HREF="mailto:{$email.email}">{$email.email}</A>
-                                                        {if $email.typestr}[{$email.typestr}]{/if}
-                                                        {if $email.name} ({$email.name|truncate:"40":"...":true}){/if}
+							{if $email.typestr}[{$email.typestr}]{/if}
+							{if $email.name} ({$email.name|truncate:"40":"...":true}){/if}
+						</TD>
+					</TR>
+					{/foreach}
+				</TABLE>
+			</fieldset>
+		</TD>
+	</TR>
+{/if}
+{if !empty($customerinfo.accounts)}
+	<TR>
+		<TD style="width: 1%;"></TD>
+		<TD style="width: 99%;" class="nobr">
+			<fieldset style="width: 1%;" class="nobr">
+				<legend class="bold"><IMG SRC="img/card.gif" ALT=""> {trans("Bank accounts")}</legend>
+				<TABLE>
+					{foreach $customerinfo.accounts as $account}
+					<TR{if ($account.type & $smarty.const.CONTACT_DISABLED) == $smarty.const.CONTACT_DISABLED} class="blend"{/if}>
+						<TD>
+							{format_bankaccount($account.account)}
+							{if $account.typestr}[{$account.typestr}]{/if}
+							{if $account.name} ({$account.name|truncate:"40":"...":true}){/if}
 						</TD>
 					</TR>
 					{/foreach}
